force-app/main/default/objects/Business_Hours_Adjustment__c/Business_Hours_Adjustment__c.object-meta.xml
<CustomObject>
    <description>digunakan untuk menambahkan business hours emailtocase</description>
    <label>Business Hours Adjustment</label>
    <nameField>
        <label>Business Hours Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Hours Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>