force-app/main/default/objects/Business_Hours_Adjustment__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Extended_Business_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>