force-app/main/default/objects/Business_Hours_Adjustment__c/fields/Extended_Name__c.field-meta.xml
<CustomField>
    <fullName>Extended_Name__c</fullName>
    <label>Extended Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>